fixed bug in database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -633,7 +633,13 @@
         <item>Male</item>
         <item>Female</item>
     </string-array>
-    .....
+
+    <string-array name="sp_livestock_breeding_stock_source">
+        <item>Select</item>
+        <item>Born on Farm</item>
+        <item>Purchased</item>
+    </string-array>
+
 
     <string-array name="sp_crop_transplanting_variety_earliness">
         <item>Select</item>
@@ -2159,6 +2165,17 @@
     <string name="no_record">No Record</string>
     <string name="found">Found</string>
     <string name="actionEditCrop">Edit Crop</string>
+    <string name="source_not_selected">source not selected</string>
+    <string name="name_not_entered_message">animal name not entered</string>
+    <string name="ear_tag_not_entered_message">ear tag not entered</string>
+    <string name="color_not_entered_message">color not entered</string>
+    <string name="sex_not_selected">sex not selected</string>
+    <string name="breed_not_entered_message">breed not selected</string>
+    <string name="dob_not_entered_message">date of birth not entered</string>
+    <string name="weight_not_entered">weight not entered</string>
+    <string name="father_not_entered_message">father not entered</string>
+    <string name="mother_not_entered_message">mother not entered</string>
+    <string name="photo_not_selected_message">photo not selected</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
