--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2195,6 +2195,21 @@
     <string name="gestation_period_not_entered">gestation period not entered</string>
     <string name="notification_delivery_alert">delivery alert</string>
     <string name="update_note">Update Note</string>
+    <string name="add_litter">Add Litter</string>
+    <string name="litter_size">Litter Size</string>
+    <string name="mother_dam">Mother/Dam</string>
+    <string name="father_sire">Father / Sire</string>
+    <string name="born_alive">Born Alive</string>
+    <string name="born_dead">Born Dead</string>
+    <string name="number_of_males">Number of Males</string>
+    <string name="number_of_females">Number of Females</string>
+    <string name="weaning">Weaning</string>
+    <string name="days">Days</string>
+    <string name="weaning_alert">Weaning Alert</string>
+    <string name="days_before">Days Before</string>
+    <string name="litter">Litter</string>
+    <string name="dam">Dam</string>
+    <string name="sire">Sire</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
