--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2247,6 +2247,7 @@
     <string name="field">Field</string>
     <string name="season">Season</string>
     <string name="estimated_yield">Estimated Yield</string>
+    <string name="update_financial_record">Edit Financial Record</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
