--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2271,6 +2271,7 @@
     <string name="medication_type_not_selected">medication type not selected</string>
     <string name="medication_date_not_entered">medication date not entered</string>
     <string name="update_financial_record">Edit Financial Record</string>
+    <string name="update_animal">Edit Animal</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
