--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2275,6 +2275,8 @@
     <string name="update_litter">update Litter</string>
     <string name="update_mating">update mating</string>
     <string name="update_medication">update medication</string>
+    <string name="caption">Caption</string>
+    <string name="add">Add</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
