--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2277,6 +2277,7 @@
     <string name="update_medication">update medication</string>
     <string name="caption">Caption</string>
     <string name="add">Add</string>
+    <string name="image_preview">Image Preview</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
