--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2279,6 +2279,14 @@
     <string name="update_medication">update medication</string>
     <string name="caption">Caption</string>
     <string name="add">Add</string>
+    <string name="welcome_please_login_to_your_account">Welcome, Please Login to your Account</string>
+    <string name="forgot_pass">Forgot password</string>
+    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
+    <string name="create_a_new_account">Create a New Account.</string>
+    <string name="sign_up">Sign up</string>
+    <string name="district">District</string>
+    <string name="sub_county">Sub County</string>
+    <string name="village">Village</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
