--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2278,6 +2278,7 @@
     <string name="caption">Caption</string>
     <string name="add">Add</string>
     <string name="image_preview">Image Preview</string>
+    <string name="title_livestock_records">Livestock Records</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
