Added search and modified filter in breeding stock view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2290,6 +2290,7 @@
     <string name="village">Village</string>
     <string name="image_preview">Image Preview</string>
     <string name="title_livestock_records">Livestock Records</string>
+    <string name="filter_by">Filter By :</string>
 
     <string-array name="buy_produce_quantity">
         <item>750 ml - Bottle</item>
