add medication form fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2227,7 +2227,7 @@
     <string name="number_of_males">Number of Males</string>
     <string name="number_of_females">Number of Females</string>
     <string name="weaning">Weaning</string>
-    <string name="days">Days</string>
+    <string name="days">days</string>
     <string name="weaning_alert">Weaning Alert</string>
     <string name="days_before">Days Before</string>
     <string name="litter">Litter</string>
