--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2330,4 +2330,5 @@
     </string-array>
     <!--    Sign Up Test Arrays end here-->
 
+    <string name="google_maps_key">AIzaSyDxat_pXoS20ri8X2XgfQoBt9XLTRPAbcc</string>
 </resources>
