--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2331,4 +2331,9 @@
     <!--    Sign Up Test Arrays end here-->
 
     <string name="google_maps_key">AIzaSyDxat_pXoS20ri8X2XgfQoBt9XLTRPAbcc</string>
+    <string name="cash_on_delivery">Cash on delivery</string>
+    <string name="visa_card">Visa / Master Card</string>
+    <string name="mobile_money">Mobile Money</string>
+    <string name="emaisha_card">eMaisha Card</string>
+    <string name="btn_continue_payment">Continue Payment</string>
 </resources>
