--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1658,7 +1658,7 @@
     <string name="day">Wednesday</string>
     <string name="temp_max">32.6&#xb0;C Max</string>
     <string name="temp_min">16.8&#xb0;C Min</string>
-    <string name="title_predictiontools">Prediction Tools</string>
+    <string name="title_predictiontools">Farm Projections</string>
     <string name="label_revenueestimation">Revenue Estimation</string>
     <string name="label_yeild_estimation">Yeild Estimation</string>
     <string name="label_nutrient_loss">Nutrient Loss</string>
