Changes in product description. please not that all the un used layouts and views are set to visibility gone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2337,4 +2337,5 @@
     <string name="payment_methods">Payment Methods</string>
     <string name="order_summary">Order Summary</string>
     <string name="promo_code">Promo Code</string>
+    <string name="default_old_price"><strike>UGX 45.00</strike></string>
 </resources>
