--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2372,4 +2372,5 @@
     <string name="months">months</string>
     <string name="quarteryear">quarter years</string>
     <string name="halfyear">half years</string>
+    <string name="default_crop_area_units">Acres</string>
 </resources>
