--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1672,7 +1672,7 @@
     <string name="label_eqipment">Equipment</string>
     <string name="addspray">Add Spray</string>
     <string name="seeds">Seeds</string>
-    <string name="fertilizer_title">FertiliZer</string>
+    <string name="fertilizer_title">Fertilizer</string>
     <string name="planting_date">Planting Date</string>
     <string name="label_customer_supplier">Customer/Supplier</string>
     <string name="department">Department</string>
@@ -2385,6 +2385,6 @@
     <string name="quarteryear">quarter years</string>
     <string name="halfyear">half years</string>
     <string name="default_crop_area_units">Acres</string>
-    <string name="crop_protection">Pestcides/ Crop Protection</string>
-    <string name="equipments">Equipments</string>
+    <string name="crop_protection">Pesticides/Crop Protection</string>
+    <string name="equipments">Equipment</string>
 </resources>
